# spheroid-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  spheroid_app.spec
.devcontainer/: README.md  debian.Dockerfile  macos.Dockerfile  redhat.Dockerfile  windows.Dockerfile
scripts/: build-all.sh  build_linux.sh  build_macos.sh  build_windows.bat  clean.sh  docker-build-all.sh
src/: spheroid_app.py  spheroid_processor.py
