[project]
name = "spheroid-analysis"
version = "1.0.0"
description = "User-friendly application for analyzing spheroid images to identify core, border, and background regions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "customtkinter>=5.2.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
